MComix 0.90.4

    - Fixed excessive memory consumption due to cached pixmaps not being
      properly evicted.

    - Fixed certain wait conditions that prevented MComix from exiting
      on Win32.

    - The "Go to page" dialog now shows thumbnails when they are available, 
      not only after all thumbnails have been loaded.

    - Fix "Automatically open next archive" with empty archives.

MComix 0.90.3

    - MComix now uses a slightly different directory structure than before. 
      The 'src' folder is now 'mcomix' to provide a correct package name.
      'mcomix.py' is now 'mcomixstarter.py' to avoid confusing Python by
      having a module with the same name as the package around.
      Translations and images required by the GUI are now sub-packages of
      'mcomix'. 

      A setuptools-based setup.py replaces install.py. This should help for
      uniform installs across different operating systems.

    - Several strings have been reworked to ease localization.

    - Added ability to apply current changes in the edit archive window.

    - Various usability fixes on Win32, including Unicode filenames,
      loading speed, recently opened files not being displayed,
      temporary directories not being deleted, crashing due to missing
      icons, MIME type file filters in the "Open" dialog not working,
      thumbnails being regenerated unnecessarily, and others.

    - Magnifying lens is now hotkeyed to 'L', while 'G' is Go to page. (by
      Nephiel)

    - Right-click menu is now more suitable for fullscreen reading, adding
      several menu items previously only available via normal menu. (by
      Nephiel)

    - Additional RAR handler using libunrar.so/unrar.dll.

      Added archive handler using Rarlab's libunrar library
      for extracting files. Apart from being faster for sequential
      extractions than calling unrar for each single file,
      this library supports Unicode filenames natively and thus